gen/GrogtalkParser.java
// Generated from D:/Users/ACER/Documents/2020-1_SEMESTRE_9/Lenguajes de programacion/proyectofinal/grammar\Grogtalk.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrogtalkParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, L_BRACKET=3, R_BRACKET=4, L_SPAR=5, R_SPAR=6, L_PAR=7, 
		R_PAR=8, COMMA=9, COLON=10, PLUS=11, MINUS=12, STRING=13, K_NAME=14, K_SIZE=15, 
		K_TYPE=16, K_TAGS=17, K_ALIGNMENT=18, K_ARMORCLASS=19, K_HITPOINTS=20, 
		K_SPEED=21, K_SENSES=22, K_ABILITIES=23, K_SAVINGTHROW=24, K_SKILLS=25, 
		K_DAMIM=26, K_DAMRES=27, K_DAMVUL=28, K_CONDIM=29, K_LANGS=30, K_CHALLENGE=31, 
		K_SPECIALTRAITS=32, K_ACTIONS=33, K_REACTIONS=34, K_L_ACTIONS=35, WS=36, 
		INT=37;
	public static final int
		RULE_creature = 0, RULE_creature_body = 1, RULE_statistic = 2, RULE_name = 3, 
		RULE_size = 4, RULE_type = 5, RULE_tags = 6, RULE_alignment = 7, RULE_armor_class = 8, 
		RULE_hitpoints = 9, RULE_speed = 10, RULE_abilities = 11, RULE_senses = 12, 
		RULE_saving_throws = 13, RULE_skills = 14, RULE_damage_immunities = 15, 
		RULE_damage_resistances = 16, RULE_damage_vulnerabilities = 17, RULE_condition_immunities = 18, 
		RULE_languages = 19, RULE_challenge = 20, RULE_special_traits = 21, RULE_actions = 22, 
		RULE_reactions = 23, RULE_legendary_actions = 24, RULE_taglist = 25, RULE_ability_expr = 26, 
		RULE_dice_expr = 27, RULE_armor_class_expr = 28, RULE_hit_points_expr = 29, 
		RULE_common_expr = 30, RULE_action_obj = 31, RULE_action_expr = 32, RULE_key = 33, 
		RULE_value = 34, RULE_speed_expr = 35, RULE_modifier = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"creature", "creature_body", "statistic", "name", "size", "type", "tags", 
			"alignment", "armor_class", "hitpoints", "speed", "abilities", "senses", 
			"saving_throws", "skills", "damage_immunities", "damage_resistances", 
			"damage_vulnerabilities", "condition_immunities", "languages", "challenge", 
			"special_traits", "actions", "reactions", "legendary_actions", "taglist", 
			"ability_expr", "dice_expr", "armor_class_expr", "hit_points_expr", "common_expr", 
			"action_obj", "action_expr", "key", "value", "speed_expr", "modifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'d'", "'D'", "'{'", "'}'", "'['", "']'", "'('", "')'", "','", 
			"':'", "'+'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "L_BRACKET", "R_BRACKET", "L_SPAR", "R_SPAR", "L_PAR", 
			"R_PAR", "COMMA", "COLON", "PLUS", "MINUS", "STRING", "K_NAME", "K_SIZE", 
			"K_TYPE", "K_TAGS", "K_ALIGNMENT", "K_ARMORCLASS", "K_HITPOINTS", "K_SPEED", 
			"K_SENSES", "K_ABILITIES", "K_SAVINGTHROW", "K_SKILLS", "K_DAMIM", "K_DAMRES", 
			"K_DAMVUL", "K_CONDIM", "K_LANGS", "K_CHALLENGE", "K_SPECIALTRAITS", 
			"K_ACTIONS", "K_REACTIONS", "K_L_ACTIONS", "WS", "INT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grogtalk.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    int abilityCount;

	public GrogtalkParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CreatureContext extends ParserRuleContext {
		public TerminalNode L_BRACKET() { return getToken(GrogtalkParser.L_BRACKET, 0); }
		public Creature_bodyContext creature_body() {
			return getRuleContext(Creature_bodyContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(GrogtalkParser.R_BRACKET, 0); }
		public CreatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterCreature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitCreature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitCreature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreatureContext creature() throws RecognitionException {
		CreatureContext _localctx = new CreatureContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_creature);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(L_BRACKET);
			setState(75);
			creature_body();
			setState(76);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Creature_bodyContext extends ParserRuleContext {
		public List<StatisticContext> statistic() {
			return getRuleContexts(StatisticContext.class);
		}
		public StatisticContext statistic(int i) {
			return getRuleContext(StatisticContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrogtalkParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrogtalkParser.COMMA, i);
		}
		public Creature_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creature_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterCreature_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitCreature_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitCreature_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Creature_bodyContext creature_body() throws RecognitionException {
		Creature_bodyContext _localctx = new Creature_bodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_creature_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			statistic();
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(79);
				match(COMMA);
				setState(80);
				statistic();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatisticContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public SizeContext size() {
			return getRuleContext(SizeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TagsContext tags() {
			return getRuleContext(TagsContext.class,0);
		}
		public AlignmentContext alignment() {
			return getRuleContext(AlignmentContext.class,0);
		}
		public Armor_classContext armor_class() {
			return getRuleContext(Armor_classContext.class,0);
		}
		public HitpointsContext hitpoints() {
			return getRuleContext(HitpointsContext.class,0);
		}
		public SpeedContext speed() {
			return getRuleContext(SpeedContext.class,0);
		}
		public AbilitiesContext abilities() {
			return getRuleContext(AbilitiesContext.class,0);
		}
		public SensesContext senses() {
			return getRuleContext(SensesContext.class,0);
		}
		public Saving_throwsContext saving_throws() {
			return getRuleContext(Saving_throwsContext.class,0);
		}
		public SkillsContext skills() {
			return getRuleContext(SkillsContext.class,0);
		}
		public Damage_immunitiesContext damage_immunities() {
			return getRuleContext(Damage_immunitiesContext.class,0);
		}
		public Damage_resistancesContext damage_resistances() {
			return getRuleContext(Damage_resistancesContext.class,0);
		}
		public Damage_vulnerabilitiesContext damage_vulnerabilities() {
			return getRuleContext(Damage_vulnerabilitiesContext.class,0);
		}
		public Condition_immunitiesContext condition_immunities() {
			return getRuleContext(Condition_immunitiesContext.class,0);
		}
		public LanguagesContext languages() {
			return getRuleContext(LanguagesContext.class,0);
		}
		public ChallengeContext challenge() {
			return getRuleContext(ChallengeContext.class,0);
		}
		public Special_traitsContext special_traits() {
			return getRuleContext(Special_traitsContext.class,0);
		}
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public ReactionsContext reactions() {
			return getRuleContext(ReactionsContext.class,0);
		}
		public Legendary_actionsContext legendary_actions() {
			return getRuleContext(Legendary_actionsContext.class,0);
		}
		public StatisticContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statistic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterStatistic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitStatistic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitStatistic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatisticContext statistic() throws RecognitionException {
		StatisticContext _localctx = new StatisticContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statistic);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				name();
				}
				break;
			case K_SIZE:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				size();
				}
				break;
			case K_TYPE:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				type();
				}
				break;
			case K_TAGS:
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				tags();
				}
				break;
			case K_ALIGNMENT:
				enterOuterAlt(_localctx, 5);
				{
				setState(90);
				alignment();
				}
				break;
			case K_ARMORCLASS:
				enterOuterAlt(_localctx, 6);
				{
				setState(91);
				armor_class();
				}
				break;
			case K_HITPOINTS:
				enterOuterAlt(_localctx, 7);
				{
				setState(92);
				hitpoints();
				}
				break;
			case K_SPEED:
				enterOuterAlt(_localctx, 8);
				{
				setState(93);
				speed();
				}
				break;
			case K_ABILITIES:
				enterOuterAlt(_localctx, 9);
				{
				setState(94);
				abilities();
				}
				break;
			case K_SENSES:
				enterOuterAlt(_localctx, 10);
				{
				setState(95);
				senses();
				}
				break;
			case K_SAVINGTHROW:
				enterOuterAlt(_localctx, 11);
				{
				setState(96);
				saving_throws();
				}
				break;
			case K_SKILLS:
				enterOuterAlt(_localctx, 12);
				{
				setState(97);
				skills();
				}
				break;
			case K_DAMIM:
				enterOuterAlt(_localctx, 13);
				{
				setState(98);
				damage_immunities();
				}
				break;
			case K_DAMRES:
				enterOuterAlt(_localctx, 14);
				{
				setState(99);
				damage_resistances();
				}
				break;
			case K_DAMVUL:
				enterOuterAlt(_localctx, 15);
				{
				setState(100);
				damage_vulnerabilities();
				}
				break;
			case K_CONDIM:
				enterOuterAlt(_localctx, 16);
				{
				setState(101);
				condition_immunities();
				}
				break;
			case K_LANGS:
				enterOuterAlt(_localctx, 17);
				{
				setState(102);
				languages();
				}
				break;
			case K_CHALLENGE:
				enterOuterAlt(_localctx, 18);
				{
				setState(103);
				challenge();
				}
				break;
			case K_SPECIALTRAITS:
				enterOuterAlt(_localctx, 19);
				{
				setState(104);
				special_traits();
				}
				break;
			case K_ACTIONS:
				enterOuterAlt(_localctx, 20);
				{
				setState(105);
				actions();
				}
				break;
			case K_REACTIONS:
				enterOuterAlt(_localctx, 21);
				{
				setState(106);
				reactions();
				}
				break;
			case K_L_ACTIONS:
				enterOuterAlt(_localctx, 22);
				{
				setState(107);
				legendary_actions();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode K_NAME() { return getToken(GrogtalkParser.K_NAME, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public Common_exprContext common_expr() {
			return getRuleContext(Common_exprContext.class,0);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(K_NAME);
			setState(111);
			match(COLON);
			setState(112);
			common_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SizeContext extends ParserRuleContext {
		public TerminalNode K_SIZE() { return getToken(GrogtalkParser.K_SIZE, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public Common_exprContext common_expr() {
			return getRuleContext(Common_exprContext.class,0);
		}
		public SizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_size; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterSize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitSize(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitSize(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SizeContext size() throws RecognitionException {
		SizeContext _localctx = new SizeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_size);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(K_SIZE);
			setState(115);
			match(COLON);
			setState(116);
			common_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode K_TYPE() { return getToken(GrogtalkParser.K_TYPE, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public Common_exprContext common_expr() {
			return getRuleContext(Common_exprContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(K_TYPE);
			setState(119);
			match(COLON);
			setState(120);
			common_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagsContext extends ParserRuleContext {
		public TerminalNode K_TAGS() { return getToken(GrogtalkParser.K_TAGS, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public TaglistContext taglist() {
			return getRuleContext(TaglistContext.class,0);
		}
		public TagsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tags; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterTags(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitTags(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitTags(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagsContext tags() throws RecognitionException {
		TagsContext _localctx = new TagsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tags);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(K_TAGS);
			setState(123);
			match(COLON);
			setState(124);
			taglist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlignmentContext extends ParserRuleContext {
		public TerminalNode K_ALIGNMENT() { return getToken(GrogtalkParser.K_ALIGNMENT, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public Common_exprContext common_expr() {
			return getRuleContext(Common_exprContext.class,0);
		}
		public AlignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterAlignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitAlignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitAlignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlignmentContext alignment() throws RecognitionException {
		AlignmentContext _localctx = new AlignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_alignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(K_ALIGNMENT);
			setState(127);
			match(COLON);
			setState(128);
			common_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Armor_classContext extends ParserRuleContext {
		public TerminalNode K_ARMORCLASS() { return getToken(GrogtalkParser.K_ARMORCLASS, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public Common_exprContext common_expr() {
			return getRuleContext(Common_exprContext.class,0);
		}
		public Armor_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_armor_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterArmor_class(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitArmor_class(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitArmor_class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Armor_classContext armor_class() throws RecognitionException {
		Armor_classContext _localctx = new Armor_classContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_armor_class);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(K_ARMORCLASS);
			setState(131);
			match(COLON);
			setState(132);
			common_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HitpointsContext extends ParserRuleContext {
		public TerminalNode K_HITPOINTS() { return getToken(GrogtalkParser.K_HITPOINTS, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public Hit_points_exprContext hit_points_expr() {
			return getRuleContext(Hit_points_exprContext.class,0);
		}
		public HitpointsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hitpoints; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterHitpoints(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitHitpoints(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitHitpoints(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HitpointsContext hitpoints() throws RecognitionException {
		HitpointsContext _localctx = new HitpointsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_hitpoints);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(K_HITPOINTS);
			setState(135);
			match(COLON);
			setState(136);
			hit_points_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpeedContext extends ParserRuleContext {
		public TerminalNode K_SPEED() { return getToken(GrogtalkParser.K_SPEED, 0); }
		public TerminalNode COLON() { return getToken(GrogtalkParser.COLON, 0); }
		public Common_exprContext common_expr() {
			return getRuleContext(Common_exprContext.class,0);
		}
		public SpeedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_speed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).enterSpeed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrogtalkListener ) ((GrogtalkListener)listener).exitSpeed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrogtalkVisitor ) return ((GrogtalkVisitor<? extends T>)visitor).visitSpeed(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpeedContext speed() throws RecognitionException {
		SpeedContext _localctx = new SpeedContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_speed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(K_SPEED);
			setState(139);
			match(COLON);
			setState(140);
			common_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
